<resources>
    <string name="app_name">CheckSafe</string>
    <string name="btnScanner">Escanear</string>
    <string name="btnUsers">Usuarios</string>
    <string name="imgLogo">LOGO</string>
    <string name="txtCredits">Desarrollado por AkiraReiDeveloper</string>
    <string name="btnRegistrarUser">Registrar</string>
    <string name="labSexo">Sexo:</string>
    <string name="txtApellidos">Apellidos</string>
    <string name="txtNombres">Nombre</string>
    <string name="txtGrupo">Grupo</string>
    <string name="txtGrado">Grado</string>
    <string name="txtEmail">Correo Electronico</string>
    <string name="radFemenino">Femenino</string>
    <string name="radMasculino">Masculino</string>
    <string name="labTitleRegistrar">Registrar Nuevo Usuario</string>
    <string name="btnAgregar">Agregar</string>
    <string name="btnConsultar">Consultar</string>
    <string name="btnListar">Listar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="labUsuario">Usuario</string>
    <string name="txtNoCuenta">No. Cuenta</string>
    <string name="txtNoIdentificador">No. Identificacion</string>
    <string name="labTitleConsultar">Consultar Usuario</string>
    <string name="btnConsultarUser">Consultar</string>
    <string name="textSexoL">Sexo</string>
    <string name="textSexoU">Sexo</string>
    <string name="separador">_______________________________________________________________________________</string>
    <string name="imgConsultarUsuarios">img</string>
    <string name="imgAgregarUsuarios">img2</string>
    <string name="btnElegirFoto">Foto</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Selecciona alguna de las opciones</string>
    <string name="nav_header_subtitle">Escuela de Gastronomia</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">IpAddress</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
