<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.UtileriaRegistro">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        />

        <Button
            android:id="@+id/btnAgregarUtil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/botonripple"
            android:text="@string/btnAgregar"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnConsultarUtil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/botonripple"
            android:text="@string/btnConsultar"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnListarUtil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/botonripple"
            android:text="@string/btnListar"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnEliminarUtil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/botonripple"
            android:text="@string/btnEliminar"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contenedorutileria"></FrameLayout>

</LinearLayout>