<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AlumnosRegistro"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

         />

        <Button
            android:id="@+id/btnAgregarAlum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/borderedondo"
            android:text="@string/btnAgregar"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnConsultarAlum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/borderedondo"
            android:text="@string/btnConsultar"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnListarAlum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/borderedondo"
            android:text="@string/btnListar"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnEliminarAlum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/borderedondo"
            android:text="@string/btnEliminar"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contenedoralumnos"></FrameLayout>


</LinearLayout>