<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textGrupoU"
        android:layout_width="211dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/txtGrupo"
        android:textColor="@color/colorWhiteTr"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textSexoU"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textSexoU"
        android:layout_width="211dp"
        android:layout_height="25dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/textSexoU"
        android:textColor="@color/colorWhiteTr"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/separador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textSexoL" />

    <TextView
        android:id="@+id/textGrupoL"
        android:layout_width="108dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtGrupo"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textSexoL"
        app:layout_constraintEnd_toStartOf="@+id/textGrupoU"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textSexoL"
        android:layout_width="108dp"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/textSexoL"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/separador"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Sexo" />

    <TextView
        android:id="@+id/textEmailU"
        android:layout_width="211dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/txtEmail"
        android:textColor="@color/colorWhiteTr"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textGradoU"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textGradoU"
        android:layout_width="211dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/txtGrado"
        android:textColor="@color/colorWhiteTr"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textGrupoU"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textApellidosU"
        android:layout_width="211dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/txtApellidos"
        android:textColor="@color/colorWhiteTr"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textEmailU"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textNoCuentaU"
        android:layout_width="211dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/txtNoCuenta"
        android:textColor="@color/colorWhiteTr"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textNombreU"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textNombreU"
        android:layout_width="211dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/txtNombres"
        android:textColor="@color/colorWhiteTr"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textApellidosU"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textNoCuentaL"
        android:layout_width="108dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtNoCuenta"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textNombreL"
        app:layout_constraintEnd_toStartOf="@+id/textNoCuentaU"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <TextView
        android:id="@+id/textNombreL"
        android:layout_width="108dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtNombres"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textApellidosL"
        app:layout_constraintEnd_toStartOf="@+id/textNombreU"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textApellidosL"
        android:layout_width="108dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtApellidos"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textEmailL"
        app:layout_constraintEnd_toStartOf="@+id/textApellidosU"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textEmailL"
        android:layout_width="108dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtEmail"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textGradoL"
        app:layout_constraintEnd_toStartOf="@+id/textEmailU"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textGradoL"
        android:layout_width="108dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtGrado"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textGrupoL"
        app:layout_constraintEnd_toStartOf="@+id/textGradoU"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/separador"
        android:layout_width="385dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="300dp"
        android:text="@string/separador"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>