<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Fragments.RegistrarUtileria">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imgNewUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/imgAgregarUsuarios"
            android:tag="img_registra"
            android:layout_weight="1"
            app:srcCompat="@drawable/img_base" />

        <Button
            android:id="@+id/btnAgregarFoto"
            android:layout_width="77dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/botonripple"
            android:text="@string/btnElegirFoto"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:layout_weight="1"
            tools:text="Foto" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <EditText
            android:id="@+id/txtNoIdentificador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:hint="@string/txtNoIdentificador"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhiteTr"
            android:textStyle="bold"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:hint="@string/txtNombres"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhiteTr"
            android:textStyle="bold"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/txtCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="Cantidad:"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:popupBackground="@color/colorAccent"
                android:stateListAnimator="@drawable/spinner_style"
                android:background="@xml/spinner_style"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnRegistra"
            android:layout_width="216dp"
            android:layout_height="46dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/botonripple"
            android:text="@string/btnRegistrarUser"
            android:textColor="@color/colorWhite" />

    </LinearLayout>



</LinearLayout>